--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ openai==1.30.1
 pymongo==4.6.3
 python-dotenv==1.0.1
 python-docx==1.1.0
-pdfminer.six==20221105
-pandas==2.1.4
+pdfplumber==0.10.3
+pandas==2.2.2
 openpyxl==3.1.2
 pydub==0.25.1
 Pillow==10.3.0
