--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ openai==1.30.1
 pymongo==4.6.3
 python-dotenv==1.0.1
 python-docx==1.1.0
-pdfplumber==0.10.3
-pandas==2.2.2
 openpyxl==3.1.2
+pdfplumber==0.10.3
 pydub==0.25.1
 Pillow==10.3.0
+beautifulsoup4==4.12.3
+python-pptx==0.6.23
+deep-translator==1.11.4
